Добавил иконку, окно аторизации и разделение по ролям

--- a/PAF/PAF.csproj
+++ b/PAF/PAF.csproj
@@ -150,6 +150,15 @@
     <Compile Include="View\Windows\EmployeeAdd.xaml.cs">
       <DependentUpon>EmployeeAdd.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Windows\Login.xaml.cs">
+      <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Windows\MainWindowEmployee.xaml.cs">
+      <DependentUpon>MainWindowEmployee.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Windows\MainWindowSklad.xaml.cs">
+      <DependentUpon>MainWindowSklad.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -228,6 +237,18 @@
     <Page Include="View\Windows\EmployeeAdd.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Windows\Login.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Windows\MainWindowEmployee.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Windows\MainWindowSklad.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
